Actually fix the search X button alignment (no thanks Fable 5 Extra)

--- a/apps/dotcom/client/src/tla/components/TlaSidebar/sidebar.module.css
+++ b/apps/dotcom/client/src/tla/components/TlaSidebar/sidebar.module.css
@@ -750,7 +750,7 @@
 	border: none;
 	position: relative;
 	outline: none;
-	margin-inline-end: -2px;
+	margin-inline-end: -6px;
 	width: 36px;
 	height: 36px;
 	min-width: 0;
