--- a/apps/examples/src/styles.css
+++ b/apps/examples/src/styles.css
@@ -245,7 +245,7 @@ html,
 	border: none;
 	position: relative;
 	outline: none;
-	margin-inline-end: -2px;
+	margin-inline-end: -6px;
 	width: 36px;
 	height: 36px;
 	min-width: 0;
